# ferritest

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: code_style.md  gpu_architecture.md  project_overview.md  suggested_commands.md  task_completion.md
src/: cpu.rs  error.rs  gpu.rs  main.rs  patterns.rs  stats.rs  traits.rs
src/gpu/: buffers.rs  device.rs  mod.rs  shaders.rs  tester.rs
src/shaders/: patterns.wgsl  verify.wgsl
