[package]
name = "ferritest"
version = "0.1.0"
edition = "2021"
authors = ["ezmode.games"]
description = "A comprehensive, multi-threaded memory stress testing tool. Detects faulty RAM through 8 test patterns."
license = "MIT"
repository = "https://github.com/ezmode-games/ferritest"
homepage = "https://github.com/ezmode-games/ferritest"
keywords = ["memory", "stress-test", "ram", "hardware", "diagnostics"]
categories = ["command-line-utilities", "hardware-support"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
crossbeam = "0.8"
indicatif = "0.17"
num_cpus = "1.16"
humantime = "2.1"
bytesize = "1.3"
thiserror = "2.0.17"

# GPU support (feature-gated)
wgpu = { version = "27.0", optional = true }
pollster = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster", "dep:env_logger", "dep:log"]

[[bin]]
name = "ferritest"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
